--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 #[template.environment]
 # API_KEY = "Your Prismic API access token"
 [[redirects]]
-  from:"/boutique/"
-  to:https://nacrafr.fr/fr/
+  from = "/boutique/"
+  to = https://nacrafr.fr/fr/
