--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@emotion/styled": "^11.0.0",
     "@reach/skip-nav": "^0.8.6",
     "@react-google-maps/api": "^1.13.0",
+    "axios": "^0.21.0",
     "emotion": "^11.0.0",
     "emotion-server": "^11.0.0",
     "framer-motion": "^2.9.4",
@@ -47,6 +48,7 @@
     "gatsby-plugin-typography": "^2.7.0",
     "gatsby-source-prismic": "^2.2.0",
     "gatsby-transformer-sharp": "^2.7.0",
+    "js-search": "^2.0.0",
     "lodash": "^4.17.15",
     "prismic-dom": "^2.1.0",
     "prismjs": "^1.22.0",
