--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,5 @@
 # API_KEY = "Your Prismic API access token"
 [[redirects]]
   from = "/boutique/"
-  to = "https://nacrafr.fr/fr/:spat"
+  to = "https://nacrafr.fr/fr/:splat"
+  status = 200
