--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "gatsby-transformer-sharp": "^2.7.0",
     "js-search": "^2.0.0",
     "lodash": "^4.17.15",
+    "nodemailer": "^6.4.16",
     "prismic-dom": "^2.1.0",
     "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
     "react-contentful": "^2.0.30",
     "react-dom": "^16.14.0",
@@ -62,6 +64,7 @@
     "react-intl": "^5.10.4",
     "react-markdown": "^5.0.3",
     "react-photo-gallery": "^8.0.0",
+    "react-scroll": "^1.8.1",
     "react-transition-group": "^4.4.1",
     "typeface-lora": "^0.0.72",
     "typeface-source-sans-pro": "^1.1.13",
