--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "gatsby": "^2.27.2",
     "gatsby-image": "^2.6.0",
     "gatsby-plugin-emotion": "^4.5.0",
-    "gatsby-plugin-google-analytics": "^2.8.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-gtag": "^2.5.0",
     "gatsby-plugin-lodash": "^3.5.0",
     "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-netlify": "^2.6.0",
@@ -52,6 +52,7 @@
     "js-search": "^2.0.0",
     "lodash": "^4.17.15",
     "nodemailer": "^6.4.16",
+    "npm": "^6.14.10",
     "prismic-dom": "^2.1.0",
     "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
