--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "nodemailer": "^6.4.16",
     "npm": "^6.14.10",
     "prismic-dom": "^2.1.0",
+    "prismic-reactjs": "^1.3.3",
     "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
     "pure-react-carousel": "^1.27.6",
