--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "gatsby-plugin-lodash": "^3.5.0",
     "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-netlify": "^2.6.0",
-    "gatsby-plugin-offline": "^3.5.0",
     "gatsby-plugin-react-helmet": "^3.5.0",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.9.0",
     "gatsby-plugin-sitemap": "^2.7.0",
     "gatsby-plugin-typography": "^2.7.0",
